Clarity R25.0 Add text on empty date fields.
Empty fields of start/end dates, airing dates, and days spent table columns now are filled with a "-" instead of being blank.

--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,6 +1,6 @@
 /*==============================*\
   "Clarity" by Valerio Lyndon
-  R24.0
+  R25.0
 
 | == = == THEME CONTENTS == = == |
 
@@ -1796,8 +1796,10 @@ a, a:hover {
 .data.started, .data.finished, .data.days, .data.airing-started, .data.airing-finished {
 	position: relative;
 	
+	display: flex !important;
 	width: 100px;
 	height: 14px;
+	flex-flow: row wrap;
 	
 	overflow: hidden;
 	order: 25;
@@ -1807,6 +1809,7 @@ a, a:hover {
 	line-height: 14px;
 	text-align: left !important;
 	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .data.started { top: -20px; }
@@ -1820,6 +1823,8 @@ a, a:hover {
 	width: 29px;
 	padding-right: 4px;
 	border-right: 1px solid var(--text-dim);
+	margin-right: 3px;
+	flex: 0 0 auto;
 	
 	text-align: right;
 	color: var(--text-dim);
@@ -1835,6 +1840,19 @@ a, a:hover {
 .manga .data.airing-started, .manga .data.airing-finished { width: 107px; }
 .manga .data.airing-finished { margin-left: -107px; }
 .manga .data.airing-started:before, .manga .data.airing-finished:before { width: 36px; }
+
+.data.airing-started::after,
+.data.airing-finished::after,
+.data.started::after,
+.data.finished::after,
+.data.days::after {
+	content: "-";
+	display: block;
+	width: 63px;
+	flex: 0 0 auto;
+	color: var(--text-dim);
+	font-size: 14px;
+}
 
 
 
