Category Headers (Basic) Code Cleanup
Remove accidental double-statement.

--- a/Clarity Theme/Mod - Category Headers Basic.css
+++ b/Clarity Theme/Mod - Category Headers Basic.css
@@ -2,9 +2,9 @@
 | Category Headers (Basic) R0.3  |
 \*------------------------------*/
 
-[data-query*='"status":7']:not([data-query*='order']):not([data-query*='order']):not([data-query*='tag"']):not([data-query*='"s"']) .list-item:nth-child(2) { margin-top: 32px; }
+[data-query*='"status":7']:not([data-query*='order']):not([data-query*='tag"']):not([data-query*='"s"']) .list-item:nth-child(2) { margin-top: 32px; }
 
-[data-query*='"status":7']:not([data-query*='order']):not([data-query*='order']):not([data-query*='tag"']):not([data-query*='"s"']) .list-item:before {
+[data-query*='"status":7']:not([data-query*='order']):not([data-query*='tag"']):not([data-query*='"s"']) .list-item:before {
 	position: absolute;
 	top: -40px;
 	left: 0;
