--- a/Brink Theme/modThemeLight.css
+++ b/Brink Theme/modThemeLight.css
@@ -1,5 +1,5 @@
 /*------------------------------*\
-|* - -  Light Theme V1.2.0  - - *|
+|* - -  Light Theme V1.3.0  - - *|
 \* - - - - - - - - - - - - - - -*/
 
 /* User */
@@ -18,6 +18,9 @@
 	--textProminent: 27, 94%, 80%;
 	--textLinkHov: 240, 50%, 80%;
 	--textIcon: 0, 0%, 26%;
+	
+	--goldRating: 27, 87%, 67%;
+	--silverRating: 0, 0%, 80%;
 }
 
 /* List Item Specific Colours */
