--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1,5 +1,5 @@
 /* "Brink" by Valerio Lyndon
- * Version 1.4.3
+ * Version 1.4.4
  * 
  * = TABLE OF CONTENTS =
  * 
@@ -18,7 +18,7 @@
  * 
  ! USER-MENU
  * 
- ! COVER
+ ! BANNER
  * 
  ! STATUS-MENU
  @ Search
@@ -81,26 +81,30 @@
 	 * togglePV / Toggles anime preview & video links.
 	 * valid values: visible / hidden
 	 * 
-	 * toggleInfoBG / Toggles background on list items for improved readability.
-	 * valid values: visible / hidden
-	 * 
 	 * toggleTopRatings / Toggles banners on top of highly rated items.
 	 * valid values: visible / hidden
 	 * 
 	 * bgDimness / Changes dimming of background / Higher = Dimmer.
 	 * min value: 0% / max value: 100%
 	 * 
+	 * bannerVignetteOpacity / Changes opacity of banner image vignette / Higher = More Opaque.
+	 * min value: 0% / max value: 100%
+	 * 
 	 * imageBrightness(Hov) / Changes lightness of cover images / Higher = Brighter.
+	 * min value: 0% / max value: 100%
+	 * 
+	 * infoBGOpacity / Changes opacity of background on list items for improved readability / Set to 0% to hide
 	 * min value: 0% / max value: 100%
 	 */
 	
 	--toggleStats: hidden;
 	--togglePV: hidden;
-	--toggleInfoBG: visible;
 	--toggleTopRatings: visible;
 	--bgDimness: 50%;
+	--bannerVignetteOpacity: 90%;
 	--imageBrightness: 63%;
 	--imageBrightnessHov: 32%;
+	--infoBGOpacity: 85%;
 	
 	/* THEME COLOURS
 	 * 
@@ -108,6 +112,8 @@
 	 * To get the correct values, simply strip away the surrounding parentheses and blurb.
 	 * For instance, "hsl(244, 42%, 82%)" would simply become "244, 42%, 82%".
 	 * For help with HSL: https://www.w3schools.com/colors/colors_hsl.asp
+	 * 
+	 * For help with what each colour controls, see the forum post: https://myanimelist.net/forum/?topicid=1772180
 	 */
 	
 	--bg: 240, 3%, 9%;
@@ -139,11 +145,12 @@
 /* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
   @Internal
 \*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
-	
+
 :root {
 	/* INTERNALS
 	 * 
 	 * More advanced variables.
+	 * Changing the font incorrectly may result in visual bugs.
 	 */
 	
 	--font: "Sarabun", "Segoe UI", "Arial", "FontAwesome", sans-serif;
@@ -158,6 +165,9 @@
 	--bezierItemBounce: cubic-bezier(.6,.48,.7,1.45);
 	--delayMenu: 333.4ms;
 	
+	/* These SVGs will not display to non-list-owners.
+	 * Find the images for other users in the !FIXES section.
+	 */
 	--arrowUp: url(https://files.catbox.moe/uure2q.svg);
 	--arrowRt: url(https://files.catbox.moe/lqi5fy.svg);
 	--arrowDn: url(https://files.catbox.moe/m9ot24.svg);
@@ -190,13 +200,13 @@
 }
 
 *::-webkit-scrollbar-button:vertical {
-	background: transparent center / 10px auto no-repeat;
+	background: center / 10px auto no-repeat transparent;
 } *::-webkit-scrollbar-button:vertical:start {
 	background-image: var(--arrowUp);
 } *::-webkit-scrollbar-button:vertical:end {
 	background-image: var(--arrowDn);
 } *::-webkit-scrollbar-button:horizontal {
-	background: transparent center / auto 10px no-repeat;
+	background: center / auto 10px no-repeat transparent;
 } *::-webkit-scrollbar-button:horizontal:start {
 	background-image: var(--arrowLt);
 } *::-webkit-scrollbar-button:horizontal:end {
@@ -269,7 +279,7 @@ div[style^="width: 300px;"] input {
 	width: 96px;
 	height: 32px;
 	padding: 0;
-	background: hsl(var(--btn)) linear-gradient(45deg, hsl(var(--btn)) 75%, hsl(var(--btnLight)) 0%) !important;
+	background: linear-gradient(45deg, hsl(var(--btn)) 75%, hsl(var(--btnLight)) 0%) hsl(var(--btn)) !important;
 	border: 2px solid hsl(var(--btn));
 	border-radius: 3px;
 	box-shadow: -0.5px 0.7px 2.1px hsla(0, 0%, 0%, 35%);
@@ -722,7 +732,7 @@ body::before {
 
 
 /*==============================*\
-  !COVER
+  !BANNER
 \*------------------------------*/
 
 .cover-block {
@@ -758,7 +768,7 @@ body::before {
 	
 	width: 100%;
 	height: 100%;
-	background: radial-gradient(ellipse farthest-corner at center top, transparent 66.6667%, hsla(var(--bg), 90%));
+	background: radial-gradient(ellipse farthest-corner at center top, transparent 66.6667%, hsla(var(--bg), var(--bannerVignetteOpacity)));
 	box-shadow: inset 0 -12px 8px -8px hsla(0, 0%, 0%, 50%);
 }
 
@@ -780,7 +790,7 @@ body::before {
 	
 	width: 100%;
 	height: 2px;
-	background: hsl(var(--bg)) linear-gradient(to right, hsla(var(--accent), 1), hsla(var(--accent), 0.55));
+	background: linear-gradient(to right, hsla(var(--accent), 1), hsla(var(--accent), 0.55)) hsl(var(--bg));
 } #status-menu::before {
 	position: fixed;
 	top: 42px;
@@ -963,7 +973,7 @@ body::before {
 	z-index: 30;
 	
 	width: 80px;
-	height: 67px;
+	height: 32px;
 	background: none;
 }
 
@@ -1114,7 +1124,7 @@ body::before {
 	display: block;
 	width: calc(224px * 3);
 	height: 309px;
-	background: hsl(var(--bg)) url(https://i.imgur.com/5G6hsJk.png);
+	background: url(https://i.imgur.com/5G6hsJk.png) hsl(var(--bg));
 	background-blend-mode: screen;
 	padding: 48px calc((224px * 1.5) - 90px);
 	margin: 0 auto;
@@ -1333,7 +1343,7 @@ body::before {
 
 .data.image .link::after {
 	content: "";
-	background: no-repeat center / cover scroll;
+	background: center / cover no-repeat scroll;
 	background-image: inherit;
 }
 
@@ -1382,25 +1392,11 @@ body::before {
 	
 	width: 100%;
 	padding: 5px 0 27px !important;
+	background: hsla(var(--btn), var(--infoBGOpacity));
+	border-radius: 0 0 6px 6px;
 	order: 95;
 	
 	opacity: 1;
-}
-
-.data.title::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-	
-	width: 100%;
-	height: 100%;
-	background: hsla(var(--btn), 85%);
-	border-radius: 0 0 6px 6px;
-	
-	/*Toggle*/
-	visibility: var(--toggleInfoBG);
 }
 
 .data.title .link {
@@ -2125,7 +2121,6 @@ span:nth-of-type(2)::after {
 
 #fancybox-overlay {
 	background: #000 !important;
-	
 	opacity: 0.78 !important;
 }
 
@@ -2183,7 +2178,7 @@ body #fancybox-frame {
   @Rewatch-Box
 \*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
-#fancybox-wrap:not([style*="width: 1000px;"]) {
+.ownlist #fancybox-wrap:not([style*="width: 1000px;"]) {
 	left: calc(50% - 160px) !important;
 	width: auto !important;
 	height: auto !important;
@@ -2260,7 +2255,7 @@ div[style^="width: 300px;"] input {
 	
 	width: 100%;
 	height: 2px;
-	background: hsl(var(--bg)) linear-gradient(to right, hsla(var(--accent), 1), hsla(var(--accent), 0.55));
+	background: linear-gradient(to right, hsla(var(--accent), 1), hsla(var(--accent), 0.55)) hsl(var(--bg));
 }
 
 #advanced-options #fancybox-close {
@@ -2314,7 +2309,7 @@ div[style^="width: 300px;"] input {
 #advanced-options .filter-widget select,
 #advanced-options .sort-widget label {
 	height: 24px !important;
-	background: hsl(var(--btn)) calc(100% - 5px) center / auto no-repeat;
+	background: calc(100% - 5px) center / auto no-repeat hsl(var(--btn));
 	border: none !important;
 	border-radius: 3px;
 	margin-right: 2%;
