Per-Category Images v1.0.1
Quick fix for variable name for consistency with main theme.

--- a/Brink Theme/modPerCategoryImages.css
+++ b/Brink Theme/modPerCategoryImages.css
@@ -1,31 +1,31 @@
 /*------------------------------*\
-|*  Per-Category Images v1.0.0  *|
+|*  Per-Category Images v1.0.1  *|
 \* - - - - - - - - - - - - - - -*/
 
 .ownlist[data-query*='status":7'] {
 	/* All Anime */
 	--background-image: url(URLHERE);
-	--cover-image: url(URLHERE);
+	--banner-image: url(URLHERE);
 } .ownlist[data-query*='status":1'] {
 	/* Current */
 	--background-image: url(URLHERE);
-	--cover-image: url(URLHERE);
+	--banner-image: url(URLHERE);
 } .ownlist[data-query*='status":2'] {
 	/* Completed */
 	--background-image: url(URLHERE);
-	--cover-image: url(URLHERE);
+	--banner-image: url(URLHERE);
 } .ownlist[data-query*='status":3'] {
 	/* Paused */
 	--background-image: url(URLHERE);
-	--cover-image: url(URLHERE);
+	--banner-image: url(URLHERE);
 } .ownlist[data-query*='status":4'] {
 	/* Dropped */
 	--background-image: url(URLHERE);
-	--cover-image: url(URLHERE);
+	--banner-image: url(URLHERE);
 } .ownlist[data-query*='status":6'] {
 	/* Planned */
 	--background-image: url(URLHERE);
-	--cover-image: url(URLHERE);
+	--banner-image: url(URLHERE);
 }
 
 /* Internals */
@@ -46,7 +46,7 @@ body.ownlist {
 	height: 30vw;
 	min-height: calc(700px * 0.3);
 	max-height: calc(1920px * 0.3);
-	background: var(--cover-image) center / cover;
+	background: var(--banner-image) center / cover;
 }
 
 /* Remove default image */
