--- a/Puni Theme/Puni.css
+++ b/Puni Theme/Puni.css
@@ -11,7 +11,8 @@
 \*~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 :root {
-	/* Colours are mostly HSL value, but without the surrounding parenthesis. Search Google for "HSL color picker" for assistance.
+	/* Colours are mostly HSL value, but without the surrounding parenthesis.
+	 * See https://www.w3schools.com/colors/colors_hsl.asp for assistance.
 	 */
 	
 	--text-bright: 0, 0%, 89%;
@@ -25,7 +26,10 @@
 	--shadow-dark: hsla(0, 0%, 0%, .53);
 	--popup-backing: hsla(0, 0%, 0%, .73);
 	
-	/* Rating info text. Line breaks are not allowed. Instead, use "\a " (including the space after it). This will be interpreted as a line break by the code.
+	/* Rating info text. Please note, line breaks are not allowed.
+	 * Instead, use "\a " (including the space after it).
+	 * This will be interpreted as a line break by the code.
+	 * Additionally, add a backslash before any double quote i.e. \"
 	 */
 	 
 	--rating-info: "Rating Info\a \a Completed\a   8-10 - my all time favorite anime.\a   7 - not as exceptional as 8-10 ones but still my all time favorite anime!!\a   No score - a decent anime that I enjoyed to some extent. Not my all time favorite.\a \a Dropped\a   No score and with 0 episodes watched - I wasn't too interested in this anime. That doesn't mean I think it's bad.\a   No score (tried watching, reflected on episode count) - this anime didn't interest me despite me hoping it would and watching it. That doesn't mean I think it's bad.\a   1 - this anime is wrong and I do not recommend it to anyone.";
